# CodeHelm

./: .gitignore  AGENT_POLICY.md  AGENT_STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT_HYGIENE.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_PAPERS.md  SECURITY.md  feature_list.json  init.ps1  init.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: browser_steps.sample.json  osworld_steps.sample.json
src/caasys/: __init__.py  agents.py  browser.py  cli.py  engine.py  models.py  orchestrator.py  server.py  storage.py
tests/: test_placeholder.py
